--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,7 @@
     <title>Emil Kovačević | Portfolio</title>
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
+    <noscript>Front end React, javascript, IT programmer. Developer website.</noscript>
     <div id="root"></div>
   </body>
 </html>
